<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mustafa.bikefuel.NewEntry">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/new_odo"
        app:layout_constraintBottom_toTopOf="@+id/h2_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v1_guideline"
        app:layout_constraintTop_toTopOf="@+id/h1_guideline"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/v_margin_left" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/new_fuel_used"
        app:layout_constraintBottom_toTopOf="@+id/h3_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v1_guideline"
        app:layout_constraintTop_toTopOf="@+id/h2_guideline"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/v_margin_left" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/new_fuel_cost"
        app:layout_constraintBottom_toTopOf="@+id/h4_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v1_guideline"
        app:layout_constraintTop_toTopOf="@+id/h3_guideline"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/v_margin_left" />

    <EditText
        android:id="@+id/odo_ET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h2_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/v1_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v_margin_right"
        app:layout_constraintTop_toTopOf="@+id/h1_guideline" />

    <EditText
        android:id="@+id/fuel_ET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h3_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/v1_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v_margin_right"
        app:layout_constraintTop_toTopOf="@+id/h2_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cost_ET"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/h4_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/v1_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v_margin_right"
        app:layout_constraintTop_toTopOf="@+id/h3_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ok_button"
        app:layout_constraintBottom_toTopOf="@+id/h6_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/v2_guideline"
        app:layout_constraintRight_toLeftOf="@+id/v_margin_right"
        app:layout_constraintTop_toTopOf="@+id/h5_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="cancel"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toTopOf="@+id/h6_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/v_margin_left"
        app:layout_constraintRight_toLeftOf="@+id/v2_guideline"
        app:layout_constraintTop_toTopOf="@+id/h5_guideline"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h1_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h2_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h3_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h4_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h5_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/h6_guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v1_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v2_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_margin_left"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/v_margin_right"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</android.support.constraint.ConstraintLayout>
